# ypkpathway

./: .README.old  .binstar.yml  .coverage  .coveragerc  .gitattributes  .gitignore  .travis.yml  .travis.yml_  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt~  anaconda_packages_build_and_upload.sh  appveyor.yml  build.sh  ci.sh  environment.yml  make_new_ypk_pathway_release_and_upload_pypi.sh  make_new_ypk_pathway_release_and_upload_pypi.sh~  meta.yaml  pyproject.toml  python36.yml  python37.yml  requirements.in  requirements.txt  run_test.py  run_tests.py  run_tests.py_  run_tests.py~  script_for_building_anaconda_packages.sh  setup.cfg  setup.py  setup.py__  test_environment35.yml  test_environment36.yml  test_environment37.yml  test_requirements.txt  untitled (copy).toml
dev/: pTA1_TDH3_ScCTT1_PGI1.gb  pTA1_TDH3_ScCTT1_PGI1.ipynb  pYPK0.gb  pYPK0_TDH3_ScCTT1_PGI1.gb  pYPKa.gb  pYPKa_A_ARF1.gb  pYPKa_A_ScATF1.gb  pYPKa_E_ARF1.gb  pYPKa_E_PGI1.gb  pYPKa_Z_ARF1.gb  pYPKa_Z_TDH3.gb  standard_primers (copy).fasta  standard_primers.fasta
docs/: .~lock.manual.odt#  Supplementary material  II.docx  examples.odt  examples.txt  make_pdf_manual.sh  manual.odt  pYPK_figure.docx  pYPK_figure.odt  plasmid_script.py  ypkpathway_manual_0_0_9.docx  ypkpathway_manual_0_0_9.odt
scripts/: YeastPathwayKitSystematicNames.txt  YeastPathwayKit_project_from_systematic_name (3rd copy).py  YeastPathwayKit_project_from_systematic_name (4th copy).py  YeastPathwayKit_project_from_systematic_name (another copy).py  YeastPathwayKit_project_from_systematic_name (copy).py  (+20 more)
(+643 files in other folders)
