[project]
name = "ypkpathway"
authors = [
    { name = "Björn F. Johansson", email = "bjornjobb@gmail.com" }
]
dynamic = ["version"]
license = {file = "LICENSE.txt"}
keywords=["bioinformatics", "DNA", "cloning", "Jupyter"]
dependencies = [
"pydna>=5.0.0",
"jupytext>=1.14.4",
"nbconvert>=7.2.6",
"nbformat>=5.7.0",
"pandas>=1.5.2",
"importlib_resources==5.7"]

#[tool.poetry.dependencies]
#importlib_resources = [ {version = "5.7", python = ">=3.8"}]

classifiers=["Development Status :: 4 - Beta",
           "Environment :: Console",
           "Intended Audience :: Education",
           "Intended Audience :: Developers",
           "Intended Audience :: Science/Research",
           "License :: OSI Approved :: BSD License",
           "Operating System :: OS Independent",
           "Programming Language :: Python :: 3.7",
           "Programming Language :: Python :: 3.8",
           "Programming Language :: Python :: 3.9",
           "Programming Language :: Python :: 3.10",
           "Programming Language :: Python :: 3.11",
           "Topic :: Education",
           "Topic :: Scientific/Engineering :: Bio-Informatics", ]

[build-system]
requires = [
"setuptools>=65",
"wheel>=0.38.4",
"setuptools_scm[toml]>=7.0.5"]

[tool.setuptools_scm]
write_to = "src/ypkpathway/_version.py"

# https://www.toml-lint.com